--- a/src/app/edit-contact/edit-contact.component.html
+++ b/src/app/edit-contact/edit-contact.component.html
@@ -21,9 +21,13 @@
           <img src="/plus-grey-blue.png" class="add" />
         </div>
         <div class="radio">
-          <input type="radio" formControlName="phoneType" value="mobile" /> Mobile
+          <span *ngFor="let phoneType of phoneTypes">
+            <input type="radio" formControlName="phoneType" [value]="phoneType.value" />
+            {{phoneType.title}}
+          </span>
+          <!-- <input type="radio" formControlName="phoneType" value="mobile" /> Mobile
           <input type="radio" formControlName="phoneType" value="work" /> Work
-          <input type="radio" formControlName="phoneType" value="other" /> Other
+          <input type="radio" formControlName="phoneType" value="other" /> Other -->
         </div>
       </div>
     </section>
